2010-03-14 Jens Thoms Toerring    <jt@toerring.de>

	* clipboard.c: Converted error message into warning printed
	out when a selectio request is made to the XForms program for
	a type of Atom that XForms doesn't support. Thanks to Mark
	Adler for pointing out the problem.

2010-03-09 Jens Thoms Toerring    <jt@toerring.de>

	* Several changes to the way things re redrawn - there
	were some problems with redrawing labels that needed
	several changes to get it right (again).

	* Some unused stuff removed from include files

	* Corrections in the documentation

2010-01-09 Jens Thoms Toerring    <jt@toerring.de>

	* Lots of clean-up in header files to address inconsistencies
	(and in some cases also function prototypes had to be changed)
	as pointed out by LukenShiro.

	* lib/input.c: Bug with return behaviour of FL_MULTI_INPUT
	objects fixed.

	* lib/popup.c, lib/nmenu.c: Functions added for adding
	and modifying popup entries using a FL_POPUP_ITEM added.

	* lib/objects.c: Several getter functions for object
	properties added

	* gl/glcanvas.c: Bug about missing requested event and
	pointed out by Dave Strang fixed.

2009-12-21 Jens Thoms Toerring    <jt@toerring.de>

	Some problems with new forms.h pointed out by Lukenshiro
	and Luis Balona cleaned up.

2009-12-14 Jens Thoms Toerring    <jt@toerring.de>

	Some more clean-up in header files (and documentation)

2009-12-13 Jens Thoms Toerring    <jt@toerring.de>

	demos/thumbwheel.c: Bug fixed as pointed out by "LukeShiro"

	images/flimage.h: Removed useless declaration of fl_basename()
	as proposed by "LukenShiro"

	several include files: Removed useless members from a number
	of structures and enums, adjusted return types of a few
	functions to fit the documentation, all as part of the clean
	up for the new SO version since this just th right moment to
	get rid of garbage.

2009-11-30 Jens Thoms Toerring    <jt@toerring.de>

	* configure.ac: Updated SO_VERSION since the library isn't